--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start:dev": "nodemon src/app.ts",
     "start": "tsc && node build/app.js",
     "migrate": "ts-node ./src/migration-runner/migrate.ts",
+    "deploy": "npm run migrate && npm run start",
     "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
